# polyhedral_splines

./: .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml  index.html  pyproject.toml
.github/workflows/: build.yml
Doc/: Doxyfile
Doc/extras/: footer.html
Doc/pages/: c_sharp_compile.md  c_sharp_lib.md  compile.md  cpp_lib.md  cpp_lib_compile.md  exe.md  getting_started.md  mainpage.md  python_compile.md  web.md  web_compile.md
Source/: .gitignore  CMakeLists.txt  testAllFiles.sh
Source/src/: ProcessMesh.hpp  main.cpp  serial.hpp
Source/src/Helper/: HalfedgeOperation.cpp  HalfedgeOperation.hpp  Helper.cpp  Helper.hpp  Matrix.hpp  ReadCSV2EigenMatrix.cpp  ReadCSV2EigenMatrix.hpp  ReadCSV2Matrix.cpp  ReadCSV2Matrix.hpp
Source/src/Patch/: ExtraordinaryPatchConstructor.cpp  ExtraordinaryPatchConstructor.hpp  NGonPatchConstructor.cpp  NGonPatchConstructor.hpp  Patch.hpp  PatchBuilder.cpp  PatchBuilder.hpp  PatchConstructor.hpp  PolarPatchConstructor.cpp  PolarPatchConstructor.hpp  RegularPatchConstructor.cpp  RegularPatchConstructor.hpp  T0PatchConstructor.cpp  T0PatchConstructor.hpp  T1PatchConstructor.cpp  T1PatchConstructor.hpp  T2PatchConstructor.cpp  T2PatchConstructor.hpp  TwoTrianglesTwoQuadsPatchConstructor.cpp  TwoTrianglesTwoQuadsPatchConstructor.hpp
Source/src/Patch/Table/: T0.csv  T1.csv  T2.csv  eopSct3.csv  eopSct5.csv  eopSct6.csv  eopSct7.csv  eopSct8.csv  ngonSct3.csv  ngonSct5.csv  ngonSct6.csv  ngonSct7.csv  ngonSct8.csv  polarSct3.csv  polarSct4.csv  polarSct5.csv  polarSct6.csv  polarSct7.csv  polarSct8.csv
Source/src/PatchConsumer/: BVWriter.cpp  BVWriter.hpp  IGSWriter.cpp  IGSWriter.hpp  PatchConsumer.hpp
Source/src/PatchConsumer/BVWriter/Serial/: BVWriterSerial.cpp  BVWriterSerial.hpp
Source/src/Pool/: Pool.hpp
csharp/: PolyhedralNetSplines.cs  PolyhedralNetSplines.csproj  README.md  csBindings.cpp
python/: CMakeLists.txt  README.md  pybind.cpp
python/polyhedral_net_splines/: __init__.py
src/: PnSpline.cpp  PnSpline.hpp  ProcessMesh.cpp  ProcessMesh.hpp  main.cpp
src/Helper/: HalfedgeOperation.cpp  Helper.cpp  Helper.hpp  Matrix.hpp  ReadCSV2Matrix.cpp  ReadCSV2Matrix.hpp  simple_arg.hpp
src/Patch/: ExtraordinaryPatchConstructor.cpp  ExtraordinaryPatchConstructor.hpp  NGonPatchConstructor.cpp  NGonPatchConstructor.hpp  Patch.cpp  Patch.hpp  PatchBuilder.cpp  PatchBuilder.hpp  PatchConstructor.hpp  PolarPatchConstructor.cpp  PolarPatchConstructor.hpp  RegularPatchConstructor.cpp  RegularPatchConstructor.hpp  T0PatchConstructor.cpp  T0PatchConstructor.hpp  T1PatchConstructor.cpp  T1PatchConstructor.hpp  T2PatchConstructor.cpp  T2PatchConstructor.hpp  TwoTrianglesTwoQuadsPatchConstructor.cpp  TwoTrianglesTwoQuadsPatchConstructor.hpp
src/Patch/Table/: LICENSE.txt  T1.csv
src/PatchConsumer/: BVWriter.cpp  EvaluatedMeshWriter.cpp  EvaluatedMeshWriter.hpp  STEPWriter.cpp  STEPWriter.hpp
src/Pool/: Pool.hpp
src/Subdivision/: VertexMapping.cpp  VertexMapping.hpp  subdivision.cpp  subdivision.hpp
src/api/: PnSPatch.hpp  PnSPatch_impl.cpp  PnSPatch_impl.hpp  PnSpline.hpp  PnSpline_impl.cpp  PnSpline_impl.hpp
wasm/: README.md  wasmBindings.cpp
